[gd_scene load_steps=5 format=3 uid="uid://djlgcetry201m"]

[ext_resource type="Texture2D" uid="uid://di07725jab1kb" path="res://Sprites/ledge_tile.png" id="1_wkhr2"]
[ext_resource type="Script" path="res://LedgeTile.gd" id="2_pyfon"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8hux"]
size = Vector2(8, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3coin"]
size = Vector2(32, 32)

[node name="Ledge" type="Sprite2D"]
texture = ExtResource("1_wkhr2")
script = ExtResource("2_pyfon")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-20, 0)
shape = SubResource("RectangleShape2D_x8hux")

[node name="Timer" type="Timer" parent="."]

[node name="HangPoint" type="Node2D" parent="."]
position = Vector2(-20, 25)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_3coin")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
